--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -253,13 +253,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74Ihp7XaMISv"
+        "id": "74Ihp7XaMISv",
+        "outputId": "fa9b1f29-a1cd-4b78-8f56-dac269955476",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 279
+        }
       },
       "source": [
-        "data3= data.groupby(pd.Grouper(key='Antiguedad')).sum()"
+        "data.set_index( 'Fecha' ).groupby ( 'Año' ) [ \"Mes\" ].remuestrear( \"M\" ).suma()"
       ],
-      "execution_count": 271,
-      "outputs": []
+      "execution_count": 295,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-295-20d1c6a53524>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'Fecha'\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0;34m'Año'\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0;34m\"Mes\"\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremuestrear\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"M\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msuma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/groupby/groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    702\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m         raise AttributeError(\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0;34mf\"'{type(self).__name__}' object has no attribute '{attr}'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'SeriesGroupBy' object has no attribute 'remuestrear'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
