--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 182,
+      "execution_count": 209,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "8091aeaa-23bf-49f7-9d1c-8cc31e007272",
+        "outputId": "4e034fb7-352f-4efc-e74b-82d4c1f1fbcf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 183,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,14 +101,14 @@
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')"
       ],
-      "execution_count": 184,
+      "execution_count": 211,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "3cd8e274-b5ba-4e1a-b7e0-e3855bfa1a6b",
+        "outputId": "0ba39362-85d0-4876-a721-d53c712b3414",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -117,7 +117,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 185,
+      "execution_count": 212,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 212
         }
       ]
     },
@@ -218,7 +218,7 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 186,
+      "execution_count": 213,
       "outputs": []
     },
     {
@@ -229,14 +229,14 @@
       "source": [
         "data.Fecha = pd.to_datetime(data.Fecha)"
       ],
-      "execution_count": 187,
+      "execution_count": 214,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lB5IaAuJXHsS",
-        "outputId": "03e9274a-f39c-49ec-dbdb-f7a332bfa4bb",
+        "outputId": "b5609b04-6850-4e2f-bb4e-803652a132db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -245,7 +245,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 188,
+      "execution_count": 215,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +333,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 188
+          "execution_count": 215
         }
       ]
     },
@@ -341,7 +341,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wF0jy-BcazD7",
-        "outputId": "51de7c4a-abe4-46d9-bc1b-d940b1c4ee17",
+        "outputId": "df48a8c1-25ee-4742-d332-eb2d4adeba16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -350,7 +350,7 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 189,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 189
+          "execution_count": 216
         }
       ]
     },
@@ -375,7 +375,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MND5wUGBWhcM",
-        "outputId": "4684fa50-5c3f-489f-ef6b-10af9dbee205",
+        "outputId": "2dae2f10-4712-4a4c-8dac-429f3c65c759",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -385,7 +385,7 @@
         " #validamos datos faltantes\n",
         " print(pd.isnull(data).sum())"
       ],
-      "execution_count": 190,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "S5N5IgkXbwjx",
-        "outputId": "e4e4c4b8-9408-4679-9808-8d66d5995f11",
+        "outputId": "897191fc-8b62-4285-80d3-ef8b71d70611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 486
@@ -414,7 +414,7 @@
       "source": [
         "data.describe(include='all')"
       ],
-      "execution_count": 191,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 191
+          "execution_count": 218
         }
       ]
     },
@@ -592,7 +592,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lK3hH5q9eBqY",
-        "outputId": "4ef313fd-461b-432b-8e47-0d1edde09f2e",
+        "outputId": "0a9fe142-9746-41ec-8cc7-f76150d58386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
@@ -601,24 +601,24 @@
       "source": [
         "data.info "
       ],
-      "execution_count": 197,
+      "execution_count": 219,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<bound method DataFrame.info of         Año  Mes      Fecha Antiguedad  Cant_Bajas\n",
-              "0      2019   11 2019-01-11          6           3\n",
-              "1      2020    4 2020-01-04          6           1\n",
-              "2      2019   11 2019-05-11          7           1\n",
-              "3      2020    2 2020-01-02          6           1\n",
-              "4      2019    8 2019-01-08          6           1\n",
-              "...     ...  ...        ...        ...         ...\n",
-              "17096  2019    8 2019-01-08          6           1\n",
-              "17097  2019    4 2019-01-04          3           1\n",
-              "17098  2019   11 2019-01-11          5           1\n",
-              "17099  2020    7 2020-01-07          6           1\n",
-              "17100  2019    3 2019-03-23          5           1\n",
+              "<bound method DataFrame.info of         Año  Mes      Fecha  Antiguedad  Cant_Bajas\n",
+              "0      2019   11 2019-01-11        1068           3\n",
+              "1      2020    4 2020-01-04         860           1\n",
+              "2      2019   11 2019-05-11        1673           1\n",
+              "3      2020    2 2020-01-02        1419           1\n",
+              "4      2019    8 2019-01-08         782           1\n",
+              "...     ...  ...        ...         ...         ...\n",
+              "17096  2019    8 2019-01-08        1029           1\n",
+              "17097  2019    4 2019-01-04         191           1\n",
+              "17098  2019   11 2019-01-11         686           1\n",
+              "17099  2020    7 2020-01-07        1037           1\n",
+              "17100  2019    3 2019-03-23         703           1\n",
               "\n",
               "[17101 rows x 5 columns]>"
             ]
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 197
+          "execution_count": 219
         }
       ]
     },
@@ -805,7 +805,7 @@
       "source": [
         "grupo = data.groupby(by = ['Año','Mes','Antiguedad']).sum()"
       ],
-      "execution_count": 203,
+      "execution_count": 220,
       "outputs": []
     },
     {
@@ -816,23 +816,23 @@
       "source": [
         "grupo= pd.DataFrame(grupo).reset_index()"
       ],
-      "execution_count": 205,
+      "execution_count": 224,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "z8BJoYLEN3I5",
-        "outputId": "fd6a52d5-f74d-4d30-86d5-225e53c29a55",
+        "outputId": "b25adc35-7413-4267-8031-7779fab8ebc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 402
+          "height": 195
         }
       },
       "source": [
-        "grupo"
+        "grupo.head(5)"
       ],
-      "execution_count": 206,
+      "execution_count": 227,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,105 +867,54 @@
               "      <th>0</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
+              "      <td>13</td>\n",
               "      <td>1</td>\n",
-              "      <td>29.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>28.0</td>\n",
+              "      <td>18</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>35.0</td>\n",
+              "      <td>31</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>77.0</td>\n",
+              "      <td>32</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>656.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>163</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>12</td>\n",
-              "      <td>3</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>164</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>12</td>\n",
-              "      <td>4</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>165</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>12</td>\n",
-              "      <td>5</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>166</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>12</td>\n",
-              "      <td>6</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>167</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>12</td>\n",
-              "      <td>7</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>36</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>168 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "      Año  Mes Antiguedad  Cant_Bajas\n",
-              "0    2019    1          1        29.0\n",
-              "1    2019    1          2        28.0\n",
-              "2    2019    1          3        35.0\n",
-              "3    2019    1          4        77.0\n",
-              "4    2019    1          5       656.0\n",
-              "..    ...  ...        ...         ...\n",
-              "163  2020   12          3         NaN\n",
-              "164  2020   12          4         NaN\n",
-              "165  2020   12          5         NaN\n",
-              "166  2020   12          6         NaN\n",
-              "167  2020   12          7         NaN\n",
-              "\n",
-              "[168 rows x 4 columns]"
+              "    Año  Mes  Antiguedad  Cant_Bajas\n",
+              "0  2019    1          13           1\n",
+              "1  2019    1          18           1\n",
+              "2  2019    1          31           1\n",
+              "3  2019    1          32           1\n",
+              "4  2019    1          36           1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 206
+          "execution_count": 227
         }
       ]
     },
