--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -781,8 +781,92 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "iXTth1JndTCh",
+        "outputId": "c41c38ab-b348-4ea5-f0d3-017bcfb96bd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
+      },
+      "source": [
+        "grupo.dtypes"
+      ],
+      "execution_count": 290,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Año              int64\n",
+              "Mes              int64\n",
+              "Antiguedad    category\n",
+              "Cant_Bajas     float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 290
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8oP46fCvdWkB",
+        "outputId": "b9113f05-8c87-4892-dae9-f32b0f4e13e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
+      },
+      "source": [
+        " #validamos datos faltantes\n",
+        " print(pd.isnull(grupo).sum())"
+      ],
+      "execution_count": 297,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Año           0\n",
+            "Mes           0\n",
+            "Antiguedad    0\n",
+            "Cant_Bajas    0\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yh8BKX9FeFxK"
+      },
+      "source": [
+        "grupo.dropna(subset = ['Cant_Bajas'] , axis=0, inplace=True)"
+      ],
+      "execution_count": 296,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P1Qg74Qddk5L"
+      },
+      "source": [
+        "grupo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "RIAoyz3YOAJR",
-        "outputId": "736da2ed-f836-49f7-9d95-13237cac2478",
+        "outputId": "4e15c4db-e0eb-457c-f6f2-9d89c67b923e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -791,7 +875,7 @@
       "source": [
         "grupo.corr(method ='pearson')"
       ],
-      "execution_count": 256,
+      "execution_count": 299,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,12 +908,12 @@
               "    <tr>\n",
               "      <th>Año</th>\n",
               "      <td>1.000000</td>\n",
-              "      <td>0.000000</td>\n",
+              "      <td>-0.372974</td>\n",
               "      <td>0.000376</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Mes</th>\n",
-              "      <td>0.000000</td>\n",
+              "      <td>-0.372974</td>\n",
               "      <td>1.000000</td>\n",
               "      <td>-0.032048</td>\n",
               "    </tr>\n",
@@ -845,29 +929,102 @@
             ],
             "text/plain": [
               "                 Año       Mes  Cant_Bajas\n",
-              "Año         1.000000  0.000000    0.000376\n",
-              "Mes         0.000000  1.000000   -0.032048\n",
+              "Año         1.000000 -0.372974    0.000376\n",
+              "Mes        -0.372974  1.000000   -0.032048\n",
               "Cant_Bajas  0.000376 -0.032048    1.000000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 256
+          "execution_count": 299
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WLKCRVJ2MmrV"
+        "id": "WLKCRVJ2MmrV",
+        "outputId": "0153642b-c0de-44ff-83ee-73c3572ca802",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
       },
       "source": [
-        "x= np.array(data.drop(['Cant_Bajas'],ax1))\n",
-        "y= np.array(data['Cant_Bajas'])"
+        "x= grupo.iloc[:,:-1]\n",
+        "y= grupo.iloc[3]\n",
+        "y = y[:,np.newaxis]"
       ],
-      "execution_count": 20,
-      "outputs": []
+      "execution_count": 286,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hJguvTGkca5_",
+        "outputId": "38b48840-86c4-4ff2-cfda-8eca012160a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(x)"
+      ],
+      "execution_count": 288,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.frame.DataFrame"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 288
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wlQMuheEc0xh",
+        "outputId": "da39fff7-afed-4614-9925-5015f7303dec",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(y)"
+      ],
+      "execution_count": 287,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 287
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -879,7 +1036,7 @@
         "\n",
         "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -894,37 +1051,19 @@
         "svr_.fit(x_train, y_train)\n",
         "y_pred= svr_.predict(x_test)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nwBD7sd8PYZ9",
-        "outputId": "838e40e1-c1cf-4a51-cfe3-55e93bd3e4f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "nwBD7sd8PYZ9"
       },
       "source": [
         "svr_.score(x_train,y_train)"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-0.102827173078758"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -936,7 +1075,7 @@
         "poly_reg = PolynomialFeatures(degree = 3)\n",
         "x_poly = poly_reg.fit_transform(x_train)"
       ],
-      "execution_count": 37,
+      "execution_count": 264,
       "outputs": []
     },
     {
@@ -953,33 +1092,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RjekD9zaWb53",
-        "outputId": "37482863-75fb-4ec0-b581-bfa0a1523b46",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "RjekD9zaWb53"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lineal_poly = LinearRegression()\n",
         "lineal_poly.fit(x_poly,y_train)"
       ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
