--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -782,7 +782,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iXTth1JndTCh",
-        "outputId": "c41c38ab-b348-4ea5-f0d3-017bcfb96bd7",
+        "outputId": "97cd35fc-de3f-4f07-fd07-6d0fea3d86c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
@@ -791,7 +791,7 @@
       "source": [
         "grupo.dtypes"
       ],
-      "execution_count": 290,
+      "execution_count": 305,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +807,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 290
+          "execution_count": 305
         }
       ]
     },
@@ -944,87 +944,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WLKCRVJ2MmrV",
-        "outputId": "0153642b-c0de-44ff-83ee-73c3572ca802",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "id": "WLKCRVJ2MmrV"
       },
       "source": [
-        "x= grupo.iloc[:,:-1]\n",
-        "y= grupo.iloc[3]\n",
-        "y = y[:,np.newaxis]"
+        "x= grupo.iloc[:,:-1].values\n",
+        "x=np.array(x)\n",
+        "y= grupo.iloc[:,3].values"
       ],
-      "execution_count": 286,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 338,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hJguvTGkca5_",
-        "outputId": "38b48840-86c4-4ff2-cfda-8eca012160a5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "QB-OlPjkfw_G"
       },
       "source": [
-        "type(x)"
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "\n",
+        "labelencoder= LabelEncoder()\n",
+        "x[:,2] = labelencoder.fit_transform(x[:,2])\n",
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[2])],remainder='passthrough')\n",
+        "x=np.array(ct.fit_transform(x),dtype=np.int)\n",
+        "\n",
+        "x = x[:,1:]"
       ],
-      "execution_count": 288,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "pandas.core.frame.DataFrame"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 288
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wlQMuheEc0xh",
-        "outputId": "da39fff7-afed-4614-9925-5015f7303dec",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "type(y)"
-      ],
-      "execution_count": 287,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "numpy.ndarray"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 287
-        }
-      ]
+      "execution_count": 344,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1033,10 +980,9 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2)"
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=0)"
       ],
-      "execution_count": null,
+      "execution_count": 345,
       "outputs": []
     },
     {
@@ -1051,19 +997,37 @@
         "svr_.fit(x_train, y_train)\n",
         "y_pred= svr_.predict(x_test)"
       ],
-      "execution_count": null,
+      "execution_count": 346,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nwBD7sd8PYZ9"
+        "id": "nwBD7sd8PYZ9",
+        "outputId": "261cfc25-a2d2-405a-e365-ccefc3304ea3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "svr_.score(x_train,y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 347,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.2922182771563244"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 347
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1075,7 +1039,7 @@
         "poly_reg = PolynomialFeatures(degree = 3)\n",
         "x_poly = poly_reg.fit_transform(x_train)"
       ],
-      "execution_count": 264,
+      "execution_count": 348,
       "outputs": []
     },
     {
@@ -1092,21 +1056,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RjekD9zaWb53"
+        "id": "RjekD9zaWb53",
+        "outputId": "4741d341-09c6-4cee-a99c-2e700966d910",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lineal_poly = LinearRegression()\n",
         "lineal_poly.fit(x_poly,y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 350,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 350
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "o4G229MqWw0W",
-        "outputId": "597340c9-2612-451e-e80d-02a0e507d7f6",
+        "outputId": "5b54c305-f2f5-4594-d702-58b418d8b54b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1115,19 +1097,19 @@
       "source": [
         "lineal_poly.score(x_poly,y_train)"
       ],
-      "execution_count": 40,
+      "execution_count": 351,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.06117165339805852"
+              "0.8812301023449056"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 351
         }
       ]
     }
