--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -982,52 +982,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=0)"
       ],
-      "execution_count": 345,
+      "execution_count": 353,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Qji-ahB_89nD"
-      },
-      "source": [
-        "from sklearn.svm import SVR\n",
-        "\n",
-        "svr_ = SVR(kernel='rbf',C=1.0,epsilon=0.2)\n",
-        "svr_.fit(x_train, y_train)\n",
-        "y_pred= svr_.predict(x_test)"
-      ],
-      "execution_count": 346,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nwBD7sd8PYZ9",
-        "outputId": "261cfc25-a2d2-405a-e365-ccefc3304ea3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "svr_.score(x_train,y_train)"
-      ],
-      "execution_count": 347,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-0.2922182771563244"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 347
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1039,7 +995,7 @@
         "poly_reg = PolynomialFeatures(degree = 3)\n",
         "x_poly = poly_reg.fit_transform(x_train)"
       ],
-      "execution_count": 348,
+      "execution_count": 354,
       "outputs": []
     },
     {
@@ -1057,7 +1013,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RjekD9zaWb53",
-        "outputId": "4741d341-09c6-4cee-a99c-2e700966d910",
+        "outputId": "751c4175-c305-470b-97d2-662e301f90c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1068,7 +1024,7 @@
         "lineal_poly = LinearRegression()\n",
         "lineal_poly.fit(x_poly,y_train)"
       ],
-      "execution_count": 350,
+      "execution_count": 356,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1036,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 350
+          "execution_count": 356
         }
       ]
     },
@@ -1088,7 +1044,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "o4G229MqWw0W",
-        "outputId": "5b54c305-f2f5-4594-d702-58b418d8b54b",
+        "outputId": "e667ac9b-2e9e-4b21-84e9-c50f3d795adf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1097,7 +1053,7 @@
       "source": [
         "lineal_poly.score(x_poly,y_train)"
       ],
-      "execution_count": 351,
+      "execution_count": 357,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1109,7 +1065,86 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 351
+          "execution_count": 357
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e5imqv-vh5-v",
+        "outputId": "2da9df0b-fd81-4ecd-b2c2-841f1bf8e0d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "source": [
+        "grupo.corr(method ='pearson')"
+      ],
+      "execution_count": 358,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Año</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.372974</td>\n",
+              "      <td>0.000376</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Mes</th>\n",
+              "      <td>-0.372974</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.032048</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "      <td>0.000376</td>\n",
+              "      <td>-0.032048</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Año       Mes  Cant_Bajas\n",
+              "Año         1.000000 -0.372974    0.000376\n",
+              "Mes        -0.372974  1.000000   -0.032048\n",
+              "Cant_Bajas  0.000376 -0.032048    1.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 358
         }
       ]
     }
