--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -1295,7 +1295,18 @@
         "id": "U5u_gLOBiMxU"
       },
       "source": [
-        "#Grafica"
+        "#Gráfica"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uOgLAud-sRJ6"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
