--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -425,42 +425,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DN0uT17ujuNd",
-        "outputId": "be060d3f-f2f2-4688-c9f4-a5e9fec4ab79",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 118
-        }
+        "id": "DN0uT17ujuNd"
       },
       "source": [
         " #validamos datos faltantes\n",
         " print(pd.isnull(data).sum())"
       ],
-      "execution_count": 487,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Año           0\n",
-            "Mes           0\n",
-            "Fecha         0\n",
-            "Antiguedad    1\n",
-            "Cant_Bajas    0\n",
-            "dtype: int64\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fnuyxD9di4M3"
-      },
-      "source": [
-        "data.dropna(subset = ['Antiguedad'] , axis=0, inplace=True)"
-      ],
-      "execution_count": 488,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,14 +443,14 @@
         "grupo = data.groupby(by = ['Año','Mes','Antiguedad']).sum()\n",
         "grupo= pd.DataFrame(grupo).reset_index()"
       ],
-      "execution_count": 489,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "z8BJoYLEN3I5",
-        "outputId": "39dd6c8e-31f7-4c06-a101-dbf38ce210fb",
+        "outputId": "6834ad57-920e-4275-8090-21ac7875756c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -488,7 +459,7 @@
       "source": [
         "grupo.head(5)"
       ],
-      "execution_count": 490,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,112 +495,67 @@
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>29.0</td>\n",
+              "      <td>29</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
               "      <td>2</td>\n",
-              "      <td>28.0</td>\n",
+              "      <td>28</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
-              "      <td>35.0</td>\n",
+              "      <td>35</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
               "      <td>4</td>\n",
-              "      <td>125.0</td>\n",
+              "      <td>125</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2019</td>\n",
               "      <td>1</td>\n",
               "      <td>5</td>\n",
-              "      <td>587.0</td>\n",
+              "      <td>587</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    Año  Mes Antiguedad  Cant_Bajas\n",
-              "0  2019    1          1        29.0\n",
-              "1  2019    1          2        28.0\n",
-              "2  2019    1          3        35.0\n",
-              "3  2019    1          4       125.0\n",
-              "4  2019    1          5       587.0"
+              "    Año  Mes  Antiguedad  Cant_Bajas\n",
+              "0  2019    1           1          29\n",
+              "1  2019    1           2          28\n",
+              "2  2019    1           3          35\n",
+              "3  2019    1           4         125\n",
+              "4  2019    1           5         587"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 490
+          "execution_count": 52
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iXTth1JndTCh",
-        "outputId": "85dc7ba6-e909-446c-b3a3-1caeaf6bd727",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 162
-        }
-      },
-      "source": [
-        "grupo.dtypes"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-799cbec9a17a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrupo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'grupo' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8oP46fCvdWkB",
-        "outputId": "ae6fe328-dd80-42f3-b9a0-af7c4dacc3ae",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 101
-        }
+        "id": "8oP46fCvdWkB"
       },
       "source": [
         " #validamos datos faltantes\n",
         " print(pd.isnull(grupo).sum())"
       ],
-      "execution_count": 492,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Año            0\n",
-            "Mes            0\n",
-            "Antiguedad     0\n",
-            "Cant_Bajas    35\n",
-            "dtype: int64\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -637,109 +563,10 @@
         "id": "yh8BKX9FeFxK"
       },
       "source": [
-        "grupo.dropna(subset = ['Cant_Bajas'] , axis=0, inplace=True)"
+        "#grupo.dropna(subset = ['Cant_Bajas'] , axis=0, inplace=True)"
       ],
       "execution_count": 493,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P1Qg74Qddk5L",
-        "outputId": "4ba2f46f-3f92-453e-e471-fd7057fe9b7e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        }
-      },
-      "source": [
-        "grupo.head(5)"
-      ],
-      "execution_count": 494,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Año</th>\n",
-              "      <th>Mes</th>\n",
-              "      <th>Antiguedad</th>\n",
-              "      <th>Cant_Bajas</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>29.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>28.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>35.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>125.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>587.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    Año  Mes Antiguedad  Cant_Bajas\n",
-              "0  2019    1          1        29.0\n",
-              "1  2019    1          2        28.0\n",
-              "2  2019    1          3        35.0\n",
-              "3  2019    1          4       125.0\n",
-              "4  2019    1          5       587.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 494
-        }
-      ]
     },
     {
       "cell_type": "code",
