--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -479,8 +479,9 @@
         "acum10=0\n",
         "acum11=0\n",
         "acum12=0\n",
+        "\n",
         "for _ in x_train[:,8]:\n",
-        "  if x_train[cont_reg,7] == 2020:\n",
+        "  if x_train[cont_reg,7] == 2019:\n",
         "    if x_train[cont_reg,8]== 1:\n",
         "      acum1=acum1+ y_train[cont_reg]\n",
         "    else:\n",
@@ -519,7 +520,6 @@
         "  else:\n",
         "      pass\n",
         "  cont_reg=cont_reg+1\n",
-        "\n",
         "x_g, y_g = [],[] \n",
         "for _ in range(1,13):\n",
         "  x_g.append(_)\n",
@@ -546,9 +546,21 @@
         "  if _== 11:\n",
         "    y_g.append(acum11)\n",
         "  if _== 12:\n",
-        "    y_g.append(acum12) "
+        "    y_g.append(acum12) \n",
+        "  "
       ],
-      "execution_count": 325,
+      "execution_count": 332,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9VXs8bAv6sMy"
+      },
+      "source": [
+        "y_g"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
